--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
 .app {
 	padding: 0em 2em;
 }
+
+img {
+	height: 10rem;
+	width: 15rem;
+}
+
+
+.gallery-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-gap: 1em;
+	grid-auto-rows: minmax(100px, auto);
+}
+
+.gallery-item {
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+	border: 1px solid #ccc;	
+	padding: 1em;
+	margin: 1em;
+	background: #fff;
+}
