--- a/src/App.css
+++ b/src/App.css
@@ -73,9 +73,37 @@ img {
 }
 
 .challengers {
+/* set two cards next to each other and put them in the center */	
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 1em;
+	grid-auto-rows: minmax(100px, auto);
+}
+
+.challenger-img {
+	/* both pictures should have same size no matter what */
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+
+}
+
+.challenger-card {
+	width: 100%;
+	height: 100%;
 	display: flex;
-    justify-content: center;
-    margin-top: 10rem;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 1em;
+	margin: 1em;
+	background: #fff;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+	border: 1px solid #ccc;
+}
+
+.challenger-winner-text {
+	text-align: center;
 }
 
 .show-winner {
@@ -101,16 +129,16 @@ img {
 
 .card-container-body {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
 	grid-gap: 1em;
 	grid-auto-rows: minmax(100px, auto);
-	
+	margin-top: 1rem;
 	min-height: 100vh;
 	place-items: center;
 	line-height: 1.6;
 	/* background: var(--clr-neutral-900); */
 	font-family: sans-serif;
-	padding-right: 15em;
+	/* padding-right: 15em; */
 }
 
 .card {
