--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,18 @@
 	box-sizing: border-box;
 }
 
-/* body {
-	background-color: #FFD595;
-} */
+body {
+	background: #F5ECC0;
+}
 
 .app {
-	/* padding: 0em 2em; */
 	max-width: 1000px;
 	margin: 0 auto;
-	height: 100%;
-	
+	height: 100%;	
 }
 
 .app-main {
 	font-family: 'Open Sans', sans-serif;
-	/* box-shadow: 0 0 3em rgb(0 0 0 / 15%); */
-	/* background: #FFE57D; */
-	
 }
 
 img {
@@ -52,7 +47,6 @@ img {
 
 .nav-text {
 	text-transform: uppercase;
-	opacity: 0.6;
 	color: black;
 	font-weight: 700;
 	text-decoration: none;
@@ -63,7 +57,7 @@ img {
 .nav-text:hover {
 /* hover effect text */
 	opacity: 1;
-	color: #FFE57D;
+	color: #ffa500
 
 
 }
@@ -81,7 +75,13 @@ img {
 	font-family: 'Architects Daughter', cursive;
 	font-size: 1.2rem;
     margin-left: 1.5rem;
+	color: black;
 }
+
+.nav-title:hover {
+	color: #ffa500;
+}
+
 .nav-logo-text{
 	display: flex;
     flex-direction: row;
@@ -150,10 +150,8 @@ img {
 }
 
 .cutest-img {
-	width: 30rem;
+	width: 25rem;
     height: 20rem;
-    /* object-fit: cover; */
-    /* object-position: top; */
     padding: 2rem;
     border-radius: 3rem;
 }
@@ -166,6 +164,7 @@ img {
     align-items: center;
     margin-top: 1.5rem;
 	border-radius: 2rem;
+	background: #fff;
 }
 
 .test-content {
@@ -457,17 +456,7 @@ input::placeholder {
 }
 
 .challenger-card {
-	/* width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 1em;
-	margin: 1em;
-	background-image: linear-gradient(to left bottom, #fba300, #fca70b, #fcaa14, #fdae1b, #feb121, #feb631, #ffbb3e, #ffc04a, #ffc75f, #ffce72, #ffd485, #ffdb98);
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-	border-radius: 5rem; */
+	padding: 1rem;
 	border-radius: 2rem;
 	text-align: center;
 	border-radius: 2rem;
@@ -502,11 +491,8 @@ input::placeholder {
 
 .vote-btns {
 	text-align: center;
+	padding: 1rem;
 }
-/* .next-game-btn {
-
-
-} */
 
 .btn-3 {
 	background: rgb(20, 247, 58);
@@ -578,13 +564,13 @@ input::placeholder {
 	width: 100%;
   }
   .btn-1 {
-	background: rgb(6,14,131);
-	background: linear-gradient(0deg, rgba(6,14,131,1) 0%, rgba(12,25,180,1) 100%);
+	background: #ff9800;
+	background: linear-gradient(0deg, rgb(255, 182, 45) 0%, #ff9800 100%);
 	border: none;
   }
   .btn-1:hover {
-	background: rgb(0,3,255);
-  	background: linear-gradient(0deg, rgba(0,3,255,1) 0%, rgba(2,126,251,1) 100%);
+	background: #ff9800;
+  	background: rgb(255, 182, 45);
   }
 
 /* ---- CARD ---- */
@@ -598,19 +584,10 @@ input::placeholder {
 
 
 .card-container-body {
-	/* display: grid; */
-	/* grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr)); */
 	grid-gap: 1em;
-	/* grid-auto-rows: minmax(100px, auto); */
 	margin-top: 1rem;
-	/* min-height: 100vh; */
-	/* place-items: center; */
 	line-height: 1.6;
-	/* background: var(--clr-neutral-900); */
 	font-family: 'Open Sans', sans-serif;
-	/* padding-right: 15em; */
-
-
 	gap: 1rem;
 	display: flex;
 	flex-wrap: wrap;
@@ -713,19 +690,6 @@ input::placeholder {
 	border-radius: .25em;
 	margin-right: auto;
 }
-
-/* .button-add-hamster {
-	margin-top: 1rem;
-	cursor: pointer;
-	display: inline-block;
-	text-decoration: none;
-	color: var(--clr-neutral-900);
-	background-color: yellow;
-	padding: 0.5em 1.25em;
-	border-radius: .25em;
-	margin-right: auto;
-
-} */
 
 .btn-11 {
 	border: none;
