--- a/src/App.css
+++ b/src/App.css
@@ -386,7 +386,7 @@ input::placeholder {
 
 /* STATS OVERLAY */
 
-.overlayy {
+.statsOverlay {
 	position: fixed;
     background-color: rgba(0, 0, 0, 0.5);
     height: 100vh;
@@ -396,9 +396,9 @@ input::placeholder {
 	z-index: 1;
 }
 
-.overlayy .dialogg{
+.statsOverlay .showStats{
 	opacity: 1;
-	background-color: red;
+    background-color: rgba(247, 173, 62, 0.911);
     color: var(--heading-color);
 	/* width: 10em;
 	height: 10em; */
@@ -407,7 +407,8 @@ input::placeholder {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-    padding: 1em;
+    padding: 5em;
+	border-radius: 4rem;
 
 }
 
